terraform/modules/jenkins/main.tf
# THE AUTO-FINDER: This finds the latest Amazon Linux 2023 AMI automatically!
data "aws_ami" "latest_al2023" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-2023*-x86_64"]
  }
}

# The "Lock" on the AWS side
resource "aws_key_pair" "jenkins_key" {
  key_name   = "jenkins-key"
  public_key = file("${path.root}/jenkins_key.pub") 
}

# Security Group (The Firewall)
resource "aws_security_group" "jenkins_sg" {
  name        = "jenkins-sg"
  description = "Allow SSH and Jenkins traffic"
  vpc_id      = var.vpc_id

  # Allow SSH (Port 22)
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow Jenkins (Port 8080)
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow SonarQube (Port 9000)
  ingress {
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# The EC2 Instance
resource "aws_instance" "jenkins_server" {
  ami           = data.aws_ami.latest_al2023.id # Use the ID from the auto-finder!
  instance_type = "t3.micro"
  subnet_id     = var.public_subnet_id
  vpc_security_group_ids = [aws_security_group.jenkins_sg.id]
  key_name      = aws_key_pair.jenkins_key.key_name
  iam_instance_profile = var.iam_instance_profile # Attach the IAM Badge!

  root_block_device {
    volume_size = 20
    volume_type = "gp3"
  }

  tags = {
    Name = "ey-jenkins-server"
  }
}

# Variables for the module
variable "vpc_id" {}
variable "public_subnet_id" {}
variable "iam_instance_profile" {}
